--- a/syj/WebContent/css/style.css
+++ b/syj/WebContent/css/style.css
@@ -1,5 +1,13 @@
-*{margin:0;padding:0;list-style-type: none;}
+*{
+  margin:0;padding:0;list-style-type: none;
+
+}
+a{
+  color:white;
+  text-decoration: none;
+}
 .toptoptop{
+  position:fixed;
   background: #343d46;
   width:100%;
   height:80px;
@@ -61,4 +69,35 @@
 .container-1{
   margin:0 auto;
   padding-top:15px;
+}
+.sidebart{
+  position:fixed;
+  top:80px;
+  z-index:1000;
+  background:green;
+  height:auto;
+  width:210px;
+  padding:20px 20px;
+  overflow:hidden;
+  display: block;
+  bottom:0;
+  text-align: center;
+}
+.sidebart li{
+  float:left;
+  margin-top:20px;
+  text-align: center;
+  width:100px;
+}
+.sidebarf{
+  position:fixed;
+  background:#0059ab;
+  z-index:1000;
+  height:auto;
+  width:210px;
+  padding:20px 20px;
+  overflow:hidden;
+  display:block;
+  top:205px;
+  bottom:0;
 }
