로그인폼 완성, 게시판 초기 셋팅 완성, 회원가입폼 수정중

--- a/syj/WebContent/css/main.css
+++ b/syj/WebContent/css/main.css
@@ -1,4 +1,4 @@
-/* =================================================================== 
+/* ===================================================================
  *
  *  Typerite Main Stylesheet
  *  Template Ver. 1.0.0
@@ -7,10 +7,10 @@
  *
  *  TOC:
  *  # base style overrides
- *      ## links    
+ *      ## links
  *  # typography & general theme styles
  *      ## typography
- *      ## Lists    
+ *      ## Lists
  *      ## responsive video container
  *      ## floated image
  *      ## tables
@@ -23,14 +23,14 @@
  *  # additional components
  *      ## additional typo styles
  *      ## skillbars
- *      ## alert box 
- *      ## pagination 
+ *      ## alert box
+ *      ## pagination
  *  # Common and Reusable Styles
- *      ## animation stuff 
+ *      ## animation stuff
  *      ## entry media
  *      ## listing header
- *      ## slick slider 
- *      ## masonry entries 
+ *      ## slick slider
+ *      ## masonry entries
  *      ## post formats - masonry view
  *  # site header
  *      ## header logo
@@ -39,8 +39,8 @@
  *      ## header social
  *      ## header search trigger
  *      ## header-search
- *      ## close button for search 
- *  # site content & footer 
+ *      ## close button for search
+ *  # site content & footer
  *      ## content
  *      ## footer
  *      ## copyright
@@ -96,7 +96,7 @@ body.ss-bg-white {
   background: #ffffff;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * ## links
  * ------------------------------------------------------------------- */
 a {
@@ -118,10 +118,10 @@ a:active {
 
 /* ===================================================================
  * # typography & general theme styles
- * 
+ *
  * ------------------------------------------------------------------- */
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * ## typography
  * ------------------------------------------------------------------- */
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
@@ -375,7 +375,7 @@ hr {
   height: 0;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * ## Lists
  * ------------------------------------------------------------------- */
 ol {
@@ -434,7 +434,7 @@ dd {
   margin: 0 0 0 2rem;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * ## responsive video container
  * ------------------------------------------------------------------- */
 .video-container {
@@ -455,7 +455,7 @@ dd {
   height: 100%;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * ## floated image
  * ------------------------------------------------------------------- */
 img.pull-right {
@@ -466,7 +466,7 @@ img.pull-left {
   margin: 1.2rem 2.8rem 0 0;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * ## tables
  * ------------------------------------------------------------------- */
 table {
@@ -505,8 +505,8 @@ td:last-child {
   -webkit-overflow-scrolling: touch;
 }
 
-/* ------------------------------------------------------------------- 
- * ## Spacing 
+/* -------------------------------------------------------------------
+ * ## Spacing
  * ------------------------------------------------------------------- */
 button,
 .btn {
@@ -732,7 +732,7 @@ form,
 
 
 /* ===================================================================
- * # forms 
+ * # forms
  *
  * ------------------------------------------------------------------- */
 fieldset {
@@ -854,7 +854,7 @@ label > input[type="radio"] {
   top: 0.2rem;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * ## Style Placeholder Text
  * ------------------------------------------------------------------- */
 ::-webkit-input-placeholder {
@@ -899,7 +899,7 @@ label > input[type="radio"] {
   color: #8c8c8c !important;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * ## Change Autocomplete styles in Chrome
  * ------------------------------------------------------------------- */
 input:-webkit-autofill,
@@ -974,6 +974,11 @@ input[type="button"].btn--primary {
   border-color: #000000;
   color: #ffffff;
 }
+/*승재 추가*/
+.resetbutton{
+  color:#c3c3c3;
+}
+
 
 .btn.btn--primary:hover,
 button.btn--primary:hover,
@@ -1038,16 +1043,16 @@ input::-moz-focus-inner {
 
 
 
-/* =================================================================== 
+/* ===================================================================
  * # additional components
  *
  * ------------------------------------------------------------------- */
 
-/* ------------------------------------------------------------------- 
- * ## additional typo styles 
+/* -------------------------------------------------------------------
+ * ## additional typo styles
  * ------------------------------------------------------------------- */
 
-/* drop cap 
+/* drop cap
  * ----------------------------------------------- */
 .drop-cap:first-letter {
   float: left;
@@ -1062,7 +1067,7 @@ input::-moz-focus-inner {
   color: #000000;
 }
 
-/* line definition style 
+/* line definition style
  * ----------------------------------------------- */
 .lining dt,
 .lining dd {
@@ -1089,7 +1094,7 @@ input::-moz-focus-inner {
   margin-left: -0.2em;
 }
 
-/* dictionary definition style 
+/* dictionary definition style
  * ----------------------------------------------- */
 .dictionary-style dt {
   display: inline;
@@ -1110,7 +1115,7 @@ input::-moz-focus-inner {
   content: counter(definitions, decimal) ". ";
 }
 
-/** 
+/**
  * Pull Quotes
  * -----------
  * markup:
@@ -1149,7 +1154,7 @@ input::-moz-focus-inner {
   left: 4rem;
 }
 
-/** 
+/**
  * Stats Tab
  * ---------
  * markup:
@@ -1202,7 +1207,7 @@ input::-moz-focus-inner {
   color: #7e7e7e;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * ## skillbars
  * ------------------------------------------------------------------- */
 .skill-bars {
@@ -1344,8 +1349,8 @@ input::-moz-focus-inner {
   width: 100%;
 }
 
-/* ------------------------------------------------------------------- 
- * ## alert box 
+/* -------------------------------------------------------------------
+ * ## alert box
  * ------------------------------------------------------------------- */
 .alert-box {
   padding: 2.4rem 4rem 2.4rem 3.2rem;
@@ -1430,7 +1435,7 @@ input::-moz-focus-inner {
 }
 
 /* -------------------------------------------------------------------
- * ## pagination 
+ * ## pagination
  * ------------------------------------------------------------------- */
 .pgn {
   margin: 3.2rem auto 3.2rem;
@@ -1529,7 +1534,7 @@ input::-moz-focus-inner {
   background-color: transparent;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * responsive:
  * pagination
  * ------------------------------------------------------------------- */
@@ -1562,8 +1567,8 @@ input::-moz-focus-inner {
   margin-bottom: 0.8rem;
 }
 
-/* ------------------------------------------------------------------- 
- * ## animation stuff 
+/* -------------------------------------------------------------------
+ * ## animation stuff
  * ------------------------------------------------------------------- */
 .animate-this {
   opacity: 0;
@@ -1634,7 +1639,7 @@ input::-moz-focus-inner {
   margin-bottom: 0 !important;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * ## listing header
  * ------------------------------------------------------------------- */
 .listing-header {
@@ -1645,8 +1650,8 @@ input::-moz-focus-inner {
   margin-top: 0;
 }
 
-/* ------------------------------------------------------------------- 
- * ## slick slider 
+/* -------------------------------------------------------------------
+ * ## slick slider
  * ------------------------------------------------------------------- */
 .slick-slider .slick-slide {
   outline: none;
@@ -1699,8 +1704,8 @@ input::-moz-focus-inner {
   background: #ffffff;
 }
 
-/* ------------------------------------------------------------------- 
- * ## masonry entries 
+/* -------------------------------------------------------------------
+ * ## masonry entries
  * ------------------------------------------------------------------- */
 .masonry {
   margin-bottom: 3.2rem;
@@ -1859,7 +1864,7 @@ input::-moz-focus-inner {
   display: none;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  *  ## post formats - masonry view
  * ------------------------------------------------------------------- */
 
@@ -2013,7 +2018,7 @@ input::-moz-focus-inner {
   background-size: 2.2rem 2.2rem;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * responsive:
  * common and reusable styles
  * ------------------------------------------------------------------- */
@@ -2345,7 +2350,7 @@ input::-moz-focus-inner {
   line-height: 3.2rem;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * ## menu toggle
  * ------------------------------------------------------------------- */
 .header__menu-toggle {
@@ -2568,7 +2573,7 @@ input::-moz-focus-inner {
   left: 0;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * ## header-search
  * ------------------------------------------------------------------- */
 .header__search {
@@ -2599,7 +2604,7 @@ input::-moz-focus-inner {
 }
 
 .header__search-form::after {
-  content: "Press Enter to begin your search.";
+  content: "Enter 를 통해 검색을 시작하세요.";
   display: block;
   letter-spacing: 0.6px;
   font-size: 1.6rem;
@@ -2685,8 +2690,8 @@ body.search-is-visible {
   visibility: visible;
 }
 
-/* ------------------------------------------------------------------- 
- * ## close button for search 
+/* -------------------------------------------------------------------
+ * ## close button for search
  * ------------------------------------------------------------------- */
 .header__search-close {
   position: absolute;
@@ -2723,7 +2728,7 @@ body.search-is-visible {
   transform: rotate(-45deg);
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * responsive:
  * header
  * ------------------------------------------------------------------- */
@@ -2938,7 +2943,7 @@ body.search-is-visible {
 
 
 /* ===================================================================
- * # site content & footer 
+ * # site content & footer
  *
  * ------------------------------------------------------------------- */
 .s-content,
@@ -3004,7 +3009,7 @@ body.search-is-visible {
   display: none;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * ## go to top
  * ------------------------------------------------------------------- */
 .go-top {
@@ -3045,7 +3050,7 @@ body.search-is-visible {
   transform: translate3d(0, 0, 0);
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * responsive:
  * site content & footer
  * ------------------------------------------------------------------- */
@@ -3324,7 +3329,7 @@ body.search-is-visible {
   visibility: visible;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * responsive:
  * blog styles and blog components
  * ------------------------------------------------------------------- */
@@ -3384,7 +3389,7 @@ body.search-is-visible {
 }
 
 /* -------------------------------------------------------------------
- * ## comments 
+ * ## comments
  * ------------------------------------------------------------------- */
 .comments-wrap {
   padding: 6.4rem 0 0 0;
@@ -3512,7 +3517,7 @@ body.search-is-visible {
   padding-top: 6rem;
 }
 
-/* ------------------------------------------------------------------- 
+/* -------------------------------------------------------------------
  * responsive:
  * comments
  * ------------------------------------------------------------------- */
@@ -3618,5 +3623,14 @@ body.search-is-visible {
   opacity: 1;
   visibility: visible;
 }
-
+/* 승재 추가 소스 */
+.post_no{
+  font-size: 12px;
+}
+.login_sub{
+  text-align: center;
+}
+.login_sub a{
+  font-size: 15px;
+}
 /*# sourceMappingURL=main.css.map */
