--- a/syj/WebContent/css/vuestyle.css
+++ b/syj/WebContent/css/vuestyle.css
@@ -16,10 +16,10 @@
 } */
 
 .subtext111 {
-  line-height: 1em;
+  line-height: 1.5em;
 }
 
-.h1text + .subtext111, p + p {
+.h1text + .subtext111 {
   margin-top: 10px;
   color:#fff;
 }
@@ -67,8 +67,8 @@
 .card {
   position: relative;
   flex: 0 0 240px;
-  width: 240px;
-  height: 320px;
+  width: 450px;
+  height: 360px;
   background-color: #333;
   overflow: hidden;
   border-radius: 10px;
@@ -79,22 +79,21 @@
 .card-bg {
   opacity: 0.5;
   position: absolute;
-  top: -20px;
-  left: -20px;
-  width: 100%;
-  height: 100%;
-  padding: 40px;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
+  width: 500px;
+  height: 600px;
+  padding: 20px;
+  background-repeat:no-repeat;
+  background-position:center;
+  background-size:cover;
   transition: 1s cubic-bezier(0.445, 0.05, 0.55, 0.95), opacity 5s 1s cubic-bezier(0.445, 0.05, 0.55, 0.95);
-  pointer-events: none;
+  pointer-events:none;
 }
 
 .card-info {
   padding: 20px;
   position: absolute;
   bottom: 0;
+  width:100%;
   color: #fff;
   -webkit-transform: translateY(40%);
           transform: translateY(40%);
