승재 커밋 앤 푸쉬

--- a/syj/WebContent/css/base.css
+++ b/syj/WebContent/css/base.css
@@ -635,7 +635,8 @@ textarea {
   -webkit-flex: 0 0 100%;
   -ms-flex: 0 0 100%;
   flex: 0 0 100%;
-  max-width: 100%;
+  max-width: 80%;
+  margin:0 auto;
 }
 
 /* -------------------------------------------------------------------
