--- a/syj/WebContent/css/main.css
+++ b/syj/WebContent/css/main.css
@@ -3784,5 +3784,20 @@ h1+p, p+p {
   font-weight: 700;
   text-shadow: rgba(black, 0.5) 0 10px 10px;
 }
-
+.listForm {
+	width:1070px;
+	padding:270px;
+	margin:0 auto;
+	
+}
+.searchBoardSelect{
+	float:left;
+}
+.searchBoardBar{
+	width:80%;
+	float:left;
+}
+.searchBoardButton{
+	clear:both;
+}
 /*# sourceMappingURL=main.css.map */
